--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <div class="input-group">
             <label for="whatsapp">Оставьте номер телефона WhatsApp для получения QR кода для друга:</label>
-            <input type="tel" id="whatsapp" name="whatsapp" placeholder="+7 (___) ___-__-__" value="+7" required>
+            <input type="tel" id="whatsapp" name="whatsapp" placeholder="+7 (___) ___-__-__" required>
         </div>
 
         <p>*Вход на мероприятие строго по пригласительным и по QR кодам</p>
@@ -138,6 +138,18 @@
         <button class="submit-button" onclick="submitForm()">Отправить</button>
     </div>
     <script>
+        document.getElementById('whatsapp').addEventListener('focus', function() {
+            if (this.value === '') {
+                this.value = '+7';
+            }
+        });
+    
+        document.getElementById('whatsapp').addEventListener('input', function() {
+            if (!this.value.startsWith('+7')) {
+                this.value = '+7' + this.value.replace(/^\+7/, '');
+            }
+        });
+        
         function submitForm() {
             const name = document.getElementById('name').value;
             const patronymic = document.getElementById('patronymic').value;
